--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ Use search to find needed section.
 											<div class="message-description">
 												from <a href="#">Robert Jang</a>
 												&nbsp;&nbsp;·&nbsp;&nbsp;
-												2h ago
+												2小时前
 											</div>
 										</div> <!-- / .message -->
 
