--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@ Use search to find needed section.
 							<li class="nav-icon-btn nav-icon-btn-danger dropdown">
 								<a href="#notifications" class="dropdown-toggle" data-toggle="dropdown">
 									<span class="label">5</span>
-									<i class="nav-icon fa fa-bullhorn"></i>
-									<span class="small-screen-text">Notifications</span>
+									<i class="nav-icon fa fa-bell-o"></i>
+									<span class="small-screen-text">通知</span>
 								</a>
 
 								<!-- NOTIFICATIONS -->
@@ -190,14 +190,14 @@ Use search to find needed section.
 										</div> <!-- / .notification -->
 
 									</div> <!-- / .notifications-list -->
-									<a href="#" class="notifications-link">更多通知</a>
+									<a href="#" class="notifications-link">查看更多通知</a>
 								</div> <!-- / .dropdown-menu -->
 							</li>
 							<li class="nav-icon-btn nav-icon-btn-success dropdown">
 								<a href="#messages" class="dropdown-toggle" data-toggle="dropdown">
 									<span class="label">10</span>
-									<i class="nav-icon fa fa-envelope"></i>
-									<span class="small-screen-text">收入信息</span>
+									<i class="nav-icon fa fa-envelope-o"></i>
+									<span class="small-screen-text">消息</span>
 								</a>
 
 								<!-- MESSAGES -->
@@ -255,9 +255,9 @@ Use search to find needed section.
 
 										<div class="message">
 											<img src="assets/demo/avatars/2.jpg" alt="" class="message-avatar">
-											<a href="#" class="message-subject">Lorem ipsum dolor sit amet.</a>
+											<a href="#" class="message-subject">怎么样制作自己的主题？</a>
 											<div class="message-description">
-												from <a href="#">Robert Jang</a>
+												来自 <a href="#">飞天鼠D</a>
 												&nbsp;&nbsp;·&nbsp;&nbsp;
 												2小时前
 											</div>
@@ -265,56 +265,16 @@ Use search to find needed section.
 
 										<div class="message">
 											<img src="assets/demo/avatars/2.jpg" alt="" class="message-avatar">
-											<a href="#" class="message-subject">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a>
+											<a href="#" class="message-subject">购买后是否是否能够免费升级最新版？</a>
 											<div class="message-description">
-												from <a href="#">Robert Jang</a>
-												&nbsp;&nbsp;·&nbsp;&nbsp;
-												2h ago
-											</div>
-										</div> <!-- / .message -->
-
-										<div class="message">
-											<img src="assets/demo/avatars/3.jpg" alt="" class="message-avatar">
-											<a href="#" class="message-subject">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a>
-											<div class="message-description">
-												from <a href="#">Michelle Bortz</a>
+												来自 <a href="#">核桃</a>
 												&nbsp;&nbsp;·&nbsp;&nbsp;
 												2小时前
-											</div>
-										</div> <!-- / .message -->
-
-										<div class="message">
-											<img src="assets/demo/avatars/4.jpg" alt="" class="message-avatar">
-											<a href="#" class="message-subject">Lorem ipsum dolor sit amet.</a>
-											<div class="message-description">
-												from <a href="#">Timothy Owens</a>
-												&nbsp;&nbsp;·&nbsp;&nbsp;
-												2h ago
-											</div>
-										</div> <!-- / .message -->
-
-										<div class="message">
-											<img src="assets/demo/avatars/5.jpg" alt="" class="message-avatar">
-											<a href="#" class="message-subject">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a>
-											<div class="message-description">
-												from <a href="#">Denise Steiner</a>
-												&nbsp;&nbsp;·&nbsp;&nbsp;
-												2h ago
-											</div>
-										</div> <!-- / .message -->
-
-										<div class="message">
-											<img src="assets/demo/avatars/2.jpg" alt="" class="message-avatar">
-											<a href="#" class="message-subject">Lorem ipsum dolor sit amet.</a>
-											<div class="message-description">
-												from <a href="#">Robert Jang</a>
-												&nbsp;&nbsp;·&nbsp;&nbsp;
-												2h ago
 											</div>
 										</div> <!-- / .message -->
 
 									</div> <!-- / .messages-list -->
-									<a href="#" class="messages-link">MORE MESSAGES</a>
+									<a href="#" class="messages-link">查看更多消息</a>
 								</div> <!-- / .dropdown-menu -->
 							</li>
 <!-- /3. $END_NAVBAR_ICON_BUTTONS -->
@@ -630,7 +590,7 @@ Use search to find needed section.
 				<script>
 					init.push(function () {
 						var uploads_data = [
-							{ day: '2015-10-10', v: 50 },
+							{ day: '2015-10-10', v: 25 },
 							{ day: '2015-10-11', v: 10 },
 							{ day: '2015-10-12', v: 15 },
 							{ day: '2015-10-13', v: 12 },
@@ -652,7 +612,7 @@ Use search to find needed section.
 							gridTextColor: '#fff',
 							xLabels: "day",
 							xLabelFormat: function(d) {
-								return ['1月','2月','3月','4月','5月','6月','7月','8月','9月','10月','11月', '12月'][d.getMonth()] + d.getDate()+ '日';
+								return ['1','2','3','4','5','6','7','8','9','10','11', '12'][d.getMonth()] +'-'+ d.getDate();
 							},
 						});
 					});
@@ -1160,23 +1120,6 @@ Use search to find needed section.
 								</div> <!-- / .comment -->
 
 								<div class="comment">
-									<img src="assets/demo/avatars/4.jpg" alt="" class="comment-avatar">
-									<div class="comment-body">
-										<div class="comment-by">
-											<a href="#" title="">Timothy Owens</a> 评论 <a href="#" title="">文章标题</a>
-										</div>
-										<div class="comment-text">
-											Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.
-										</div>
-										<div class="comment-actions">
-											<a href="#"><i class="fa fa-pencil"></i>Edit</a>
-											<a href="#"><i class="fa fa-times"></i>Remove</a>
-											<span class="pull-right">2 hours ago</span>
-										</div>
-									</div> <!-- / .comment-body -->
-								</div> <!-- / .comment -->
-
-								<div class="comment">
 									<img src="assets/demo/avatars/5.jpg" alt="" class="comment-avatar">
 									<div class="comment-body">
 										<div class="comment-by">
@@ -1223,57 +1166,6 @@ Use search to find needed section.
 											<a href="#"><i class="fa fa-pencil"></i>修改</a>
 											<a href="#"><i class="fa fa-times"></i>删除</a>
 											<span class="pull-right">2小时前</span>
-										</div>
-									</div> <!-- / .comment-body -->
-								</div> <!-- / .comment -->
-
-								<div class="comment">
-									<img src="assets/demo/avatars/4.jpg" alt="" class="comment-avatar">
-									<div class="comment-body">
-										<div class="comment-by">
-											<a href="#" title="">Timothy Owens</a> 评论 <a href="#" title="">文章标题</a>
-										</div>
-										<div class="comment-text">
-											Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.
-										</div>
-										<div class="comment-actions">
-											<a href="#"><i class="fa fa-pencil"></i>Edit</a>
-											<a href="#"><i class="fa fa-times"></i>Remove</a>
-											<span class="pull-right">2 hours ago</span>
-										</div>
-									</div> <!-- / .comment-body -->
-								</div> <!-- / .comment -->
-
-								<div class="comment">
-									<img src="assets/demo/avatars/2.jpg" alt="" class="comment-avatar">
-									<div class="comment-body">
-										<div class="comment-by">
-											<a href="#" title="">Robert Jang</a> 评论 <a href="#" title="">文章标题</a>
-										</div>
-										<div class="comment-text">
-											Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.
-										</div>
-										<div class="comment-actions">
-											<a href="#"><i class="fa fa-pencil"></i>Edit</a>
-											<a href="#"><i class="fa fa-times"></i>Remove</a>
-											<span class="pull-right">2 hours ago</span>
-										</div>
-									</div> <!-- / .comment-body -->
-								</div> <!-- / .comment -->
-
-								<div class="comment">
-									<img src="assets/demo/avatars/4.jpg" alt="" class="comment-avatar">
-									<div class="comment-body">
-										<div class="comment-by">
-											<a href="#" title="">Timothy Owens</a> 评论 <a href="#" title="">文章标题</a>
-										</div>
-										<div class="comment-text">
-											Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.
-										</div>
-										<div class="comment-actions">
-											<a href="#"><i class="fa fa-pencil"></i>Edit</a>
-											<a href="#"><i class="fa fa-times"></i>Remove</a>
-											<span class="pull-right">2 hours ago</span>
 										</div>
 									</div> <!-- / .comment-body -->
 								</div> <!-- / .comment -->
