--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@ Use search to find needed section.
 				</li>
 			</ul> <!-- / .navigation -->
 			<div class="menu-content">
-				<a href="#" class="btn btn-primary btn-block btn-outline dark">作者：李宏愿&nbsp;&nbsp;|&nbsp;&nbsp;版本：v1.0.0</a>
+				<a href="#" class="btn btn-primary btn-block btn-outline dark">作者 : Dennis&nbsp;|&nbsp;版本 : v1.0.0</a>
 			</div>
 		</div> <!-- / #main-menu-inner -->
 	</div> <!-- / #main-menu -->
@@ -1072,7 +1072,7 @@ Use search to find needed section.
 									<img src="assets/demo/avatars/5.jpg" alt="" class="comment-avatar">
 									<div class="comment-body">
 										<div class="comment-by">
-											<a href="#" title="">小手冰凉</a> 评论 <a href="#" title="">文章标题</a>
+											<a href="#" title="">小手冰凉&nbsp;</a><i class="fa fa-venus woman-color"></i> 评论 <a href="#" title="">文章标题</a>
 										</div>
 										<div class="comment-text">
 											我觉得这个后台界面超酷！
@@ -1089,7 +1089,7 @@ Use search to find needed section.
 									<img src="assets/demo/avatars/3.jpg" alt="" class="comment-avatar">
 									<div class="comment-body">
 										<div class="comment-by">
-											<a href="#" title="">裤衩超人侠</a> 评论 <a href="#" title="">文章标题</a>
+											<a href="#" title="">裤衩超人侠&nbsp;</a><i class="fa fa-venus woman-color"></i> 评论 <a href="#" title="">文章标题</a>
 										</div>
 										<div class="comment-text">
 											今天天气不错，骑自行车去郊外玩？
@@ -1106,7 +1106,7 @@ Use search to find needed section.
 									<img src="assets/demo/avatars/2.jpg" alt="" class="comment-avatar">
 									<div class="comment-body">
 										<div class="comment-by">
-											<a href="#" title="">怪物大叔</a> 评论 <a href="#" title="">文章标题</a>
+											<a href="#" title="">怪物大叔&nbsp;</a><i class="fa fa-mars man-color"></i> 评论 <a href="#" title="">文章标题</a>
 										</div>
 										<div class="comment-text">
 											好啊，一起去啊！
@@ -1123,7 +1123,7 @@ Use search to find needed section.
 									<img src="assets/demo/avatars/5.jpg" alt="" class="comment-avatar">
 									<div class="comment-body">
 										<div class="comment-by">
-											<a href="#" title="">梦想海贼王</a> 评论 <a href="#" title="">文章标题</a>
+											<a href="#" title="">梦想海贼王&nbsp;</a><i class="fa fa-venus woman-color"></i> 评论 <a href="#" title="">文章标题</a>
 										</div>
 										<div class="comment-text">
 											我是要成为海贼王的男人。
@@ -1140,7 +1140,7 @@ Use search to find needed section.
 									<img src="assets/demo/avatars/3.jpg" alt="" class="comment-avatar">
 									<div class="comment-body">
 										<div class="comment-by">
-											<a href="#" title="">英雄の禽兽</a> 评论 <a href="#" title="">文章标题</a>
+											<a href="#" title="">英雄の禽兽&nbsp;</a><i class="fa fa-mars man-color"></i> 评论 <a href="#" title="">文章标题</a>
 										</div>
 										<div class="comment-text">
 											我很喜欢这个后台，操作方便！
@@ -1157,7 +1157,7 @@ Use search to find needed section.
 									<img src="assets/demo/avatars/2.jpg" alt="" class="comment-avatar">
 									<div class="comment-body">
 										<div class="comment-by">
-											<a href="#" title="">不懂你的心</a> 评论 <a href="#" title="">文章标题</a>
+											<a href="#" title="">不懂你的心&nbsp;</a> 评论 <a href="#" title="">文章标题</a>
 										</div>
 										<div class="comment-text">
 											今天去哪玩啊，有没有人推荐下！
@@ -1180,27 +1180,27 @@ Use search to find needed section.
 								<div class="thread">
 									<img src="assets/demo/avatars/2.jpg" alt="" class="thread-avatar">
 									<div class="thread-body">
-										<span class="thread-time">14h</span>
-										<a href="#" class="thread-title">Lorem ipsum dolor sit amet</a>
-										<div class="thread-info">started by <a href="#" title="">Robert Jang</a> in <a href="#" title="">Forum name</a></div>
+										<span class="thread-time">2小时前</span>
+										<a href="#" class="thread-title">css样式修改路径</a>
+										<div class="thread-info">发布 <a href="#" title="">秋刀鱼</a> 在 <a href="#" title="">U+样式</a></div>
 									</div> <!-- / .thread-body -->
 								</div> <!-- / .thread -->
 
 								<div class="thread">
 									<img src="assets/demo/avatars/3.jpg" alt="" class="thread-avatar">
 									<div class="thread-body">
-										<span class="thread-time">14h</span>
-										<a href="#" class="thread-title">Lorem ipsum dolor sit amet</a>
-										<div class="thread-info">started by <a href="#" title="">Michelle Bortz</a> in <a href="#" title="">Forum name</a></div>
+										<span class="thread-time">2小时前</span>
+										<a href="#" class="thread-title">U+授权用户可以删除版权吗？</a>
+										<div class="thread-info">发布 <a href="#" title="">夏丶天</a> in <a href="#" title="">U+授权</a></div>
 									</div> <!-- / .thread-body -->
 								</div> <!-- / .thread -->
 
 								<div class="thread">
 									<img src="assets/demo/avatars/4.jpg" alt="" class="thread-avatar">
 									<div class="thread-body">
-										<span class="thread-time">14h</span>
-										<a href="#" class="thread-title">Lorem ipsum dolor sit amet</a>
-										<div class="thread-info">started by <a href="#" title="">Timothy Owens</a> in <a href="#" title="">Forum name</a></div>
+										<span class="thread-time">2小时前</span>
+										<a href="#" class="thread-title">我想增加一个栏目,怎么操作？</a>
+										<div class="thread-info">发布 <a href="#" title="">小涛万岁</a> in <a href="#" title="">U+使用</a></div>
 									</div> <!-- / .thread-body -->
 								</div> <!-- / .thread -->
 
