--- a/index.html
+++ b/index.html
@@ -1207,7 +1207,7 @@ Use search to find needed section.
 								<div class="thread">
 									<img src="assets/demo/avatars/5.jpg" alt="" class="thread-avatar">
 									<div class="thread-body">
-										<span class="thread-time">14h</span>
+										<span class="thread-time">2小时前</span>
 										<a href="#" class="thread-title">Lorem ipsum dolor sit amet</a>
 										<div class="thread-info">started by <a href="#" title="">Denise Steiner</a> in <a href="#" title="">Forum name</a></div>
 									</div> <!-- / .thread-body -->
@@ -1216,7 +1216,7 @@ Use search to find needed section.
 								<div class="thread">
 									<img src="assets/demo/avatars/2.jpg" alt="" class="thread-avatar">
 									<div class="thread-body">
-										<span class="thread-time">14h</span>
+										<span class="thread-time">2小时前</span>
 										<a href="#" class="thread-title">Lorem ipsum dolor sit amet</a>
 										<div class="thread-info">started by <a href="#" title="">Robert Jang</a> in <a href="#" title="">Forum name</a></div>
 									</div> <!-- / .thread-body -->
@@ -1225,7 +1225,7 @@ Use search to find needed section.
 								<div class="thread">
 									<img src="assets/demo/avatars/2.jpg" alt="" class="thread-avatar">
 									<div class="thread-body">
-										<span class="thread-time">14h</span>
+										<span class="thread-time">2小时前</span>
 										<a href="#" class="thread-title">Lorem ipsum dolor sit amet</a>
 										<div class="thread-info">started by <a href="#" title="">Robert Jang</a> in <a href="#" title="">Forum name</a></div>
 									</div> <!-- / .thread-body -->
@@ -1234,7 +1234,7 @@ Use search to find needed section.
 								<div class="thread">
 									<img src="assets/demo/avatars/3.jpg" alt="" class="thread-avatar">
 									<div class="thread-body">
-										<span class="thread-time">14h</span>
+										<span class="thread-time">2小时前</span>
 										<a href="#" class="thread-title">Lorem ipsum dolor sit amet</a>
 										<div class="thread-info">started by <a href="#" title="">Michelle Bortz</a> in <a href="#" title="">Forum name</a></div>
 									</div> <!-- / .thread-body -->
@@ -1243,7 +1243,7 @@ Use search to find needed section.
 								<div class="thread">
 									<img src="assets/demo/avatars/4.jpg" alt="" class="thread-avatar">
 									<div class="thread-body">
-										<span class="thread-time">14h</span>
+										<span class="thread-time">2小时前</span>
 										<a href="#" class="thread-title">Lorem ipsum dolor sit amet</a>
 										<div class="thread-info">started by <a href="#" title="">Timothy Owens</a> in <a href="#" title="">Forum name</a></div>
 									</div> <!-- / .thread-body -->
@@ -1252,7 +1252,7 @@ Use search to find needed section.
 								<div class="thread">
 									<img src="assets/demo/avatars/5.jpg" alt="" class="thread-avatar">
 									<div class="thread-body">
-										<span class="thread-time">14h</span>
+										<span class="thread-time">2小时前</span>
 										<a href="#" class="thread-title">Lorem ipsum dolor sit amet</a>
 										<div class="thread-info">started by <a href="#" title="">Denise Steiner</a> in <a href="#" title="">Forum name</a></div>
 									</div> <!-- / .thread-body -->
@@ -1261,7 +1261,7 @@ Use search to find needed section.
 								<div class="thread">
 									<img src="assets/demo/avatars/2.jpg" alt="" class="thread-avatar">
 									<div class="thread-body">
-										<span class="thread-time">14h</span>
+										<span class="thread-time">2小时前</span>
 										<a href="#" class="thread-title">Lorem ipsum dolor sit amet</a>
 										<div class="thread-info">started by <a href="#" title="">Robert Jang</a> in <a href="#" title="">Forum name</a></div>
 									</div> <!-- / .thread-body -->
@@ -1269,7 +1269,7 @@ Use search to find needed section.
 								<div class="thread">
 									<img src="assets/demo/avatars/2.jpg" alt="" class="thread-avatar">
 									<div class="thread-body">
-										<span class="thread-time">14h</span>
+										<span class="thread-time">2小时前</span>
 										<a href="#" class="thread-title">Lorem ipsum dolor sit amet</a>
 										<div class="thread-info">started by <a href="#" title="">Robert Jang</a> in <a href="#" title="">Forum name</a></div>
 									</div> <!-- / .thread-body -->
@@ -1278,7 +1278,7 @@ Use search to find needed section.
 								<div class="thread">
 									<img src="assets/demo/avatars/3.jpg" alt="" class="thread-avatar">
 									<div class="thread-body">
-										<span class="thread-time">14h</span>
+										<span class="thread-time">2小时前</span>
 										<a href="#" class="thread-title">Lorem ipsum dolor sit amet</a>
 										<div class="thread-info">started by <a href="#" title="">Michelle Bortz</a> in <a href="#" title="">Forum name</a></div>
 									</div> <!-- / .thread-body -->
@@ -1287,7 +1287,7 @@ Use search to find needed section.
 								<div class="thread">
 									<img src="assets/demo/avatars/4.jpg" alt="" class="thread-avatar">
 									<div class="thread-body">
-										<span class="thread-time">14h</span>
+										<span class="thread-time">2小时前</span>
 										<a href="#" class="thread-title">Lorem ipsum dolor sit amet</a>
 										<div class="thread-info">started by <a href="#" title="">Timothy Owens</a> in <a href="#" title="">Forum name</a></div>
 									</div> <!-- / .thread-body -->
@@ -1296,7 +1296,7 @@ Use search to find needed section.
 								<div class="thread">
 									<img src="assets/demo/avatars/5.jpg" alt="" class="thread-avatar">
 									<div class="thread-body">
-										<span class="thread-time">14h</span>
+										<span class="thread-time">2小时前</span>
 										<a href="#" class="thread-title">Lorem ipsum dolor sit amet</a>
 										<div class="thread-info">started by <a href="#" title="">Denise Steiner</a> in <a href="#" title="">Forum name</a></div>
 									</div> <!-- / .thread-body -->
@@ -1305,7 +1305,7 @@ Use search to find needed section.
 								<div class="thread">
 									<img src="assets/demo/avatars/2.jpg" alt="" class="thread-avatar">
 									<div class="thread-body">
-										<span class="thread-time">14h</span>
+										<span class="thread-time">2小时前</span>
 										<a href="#" class="thread-title">Lorem ipsum dolor sit amet</a>
 										<div class="thread-info">started by <a href="#" title="">Robert Jang</a> in <a href="#" title="">Forum name</a></div>
 									</div> <!-- / .thread-body -->
