--- a/ui-icons.html
+++ b/ui-icons.html
@@ -31,12 +31,12 @@ Use search to find needed section.
 	<link href="http://fonts.useso.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,600,700,300&subset=latin" rel="stylesheet" type="text/css">
 
 	<!-- Pixel Admin's stylesheets -->
-	<link href="assets/stylesheets/bootstrap.min.css" rel="stylesheet" type="text/css">
-	<link href="assets/stylesheets/pixel-admin.min.css" rel="stylesheet" type="text/css">
-	<link href="assets/stylesheets/widgets.min.css" rel="stylesheet" type="text/css">
-	<link href="assets/stylesheets/rtl.min.css" rel="stylesheet" type="text/css">
-	<link href="assets/stylesheets/themes.min.css" rel="stylesheet" type="text/css">
-	<link href="assets/stylesheets/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href="assets/libs/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+	<link href="assets/css/pixel-admin.min.css" rel="stylesheet" type="text/css">
+	<link href="assets/css/widgets.css" rel="stylesheet" type="text/css">
+	<link href="assets/css/rtl.min.css" rel="stylesheet" type="text/css">
+	<link href="assets/css/themes.min.css" rel="stylesheet" type="text/css">
+	<link href="assets/libs/font-awesome/4.4/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
 	<!--[if lt IE 9]>
 		<script src="assets/javascripts/ie.min.js"></script>
@@ -97,7 +97,7 @@ Use search to find needed section.
 -->
 	<div id="main-navbar" class="navbar navbar-inverse" role="navigation">
 		<!-- Main menu toggle -->
-		<button type="button" id="main-menu-toggle"><i class="navbar-icon fa fa-bars icon"></i><span class="hide-menu-text">HIDE MENU</span></button>
+		<button type="button" id="main-menu-toggle"><i class="navbar-icon fa fa-bars icon"></i><span class="hide-menu-text">隐藏菜单</span></button>
 
 		<div class="navbar-inner">
 			<!-- Main navbar header -->
@@ -106,7 +106,7 @@ Use search to find needed section.
 				<!-- Logo -->
 				<a href="index.html" class="navbar-brand">
 					<div><img alt="Pixel Admin" src="assets/images/pixel-admin/main-navbar-logo.png"></div>
-					PixelAdmin
+					U+后台主题UI框架
 				</a>
 
 				<!-- Main navbar toggle -->
@@ -150,7 +150,7 @@ Use search to find needed section.
 								<a href="#notifications" class="dropdown-toggle" data-toggle="dropdown">
 									<span class="label">5</span>
 									<i class="nav-icon fa fa-bullhorn"></i>
-									<span class="small-screen-text">Notifications</span>
+									<span class="small-screen-text">通知</span>
 								</a>
 
 								<!-- NOTIFICATIONS -->
@@ -167,49 +167,49 @@ Use search to find needed section.
 									<div class="notifications-list" id="main-navbar-notifications">
 
 										<div class="notification">
-											<div class="notification-title text-danger">SYSTEM</div>
-											<div class="notification-description"><strong>Error 500</strong>: Syntax error in index.php at line <strong>461</strong>.</div>
-											<div class="notification-ago">12h ago</div>
+											<div class="notification-title text-danger">系统</div>
+											<div class="notification-description"><strong>Error 500</strong>: index.php第 <strong>461</strong> 行存在错误！</div>
+											<div class="notification-ago">12小时前</div>
 											<div class="notification-icon fa fa-hdd-o bg-danger"></div>
 										</div> <!-- / .notification -->
 
 										<div class="notification">
-											<div class="notification-title text-info">STORE</div>
-											<div class="notification-description">You have <strong>9</strong> new orders.</div>
-											<div class="notification-ago">12h ago</div>
+											<div class="notification-title text-info">店铺</div>
+											<div class="notification-description">你有 <strong>9</strong> 新订单.</div>
+											<div class="notification-ago">12小时前</div>
 											<div class="notification-icon fa fa-truck bg-info"></div>
 										</div> <!-- / .notification -->
 
 										<div class="notification">
-											<div class="notification-title text-default">CRON DAEMON</div>
-											<div class="notification-description">Job <strong>"Clean DB"</strong> has been completed.</div>
-											<div class="notification-ago">12h ago</div>
+											<div class="notification-title text-default">定时任务</div>
+											<div class="notification-description">Admin 全站缓存已 <strong>"清理完成"</strong>.</div>
+											<div class="notification-ago">12小时前</div>
 											<div class="notification-icon fa fa-clock-o bg-default"></div>
 										</div> <!-- / .notification -->
 
 										<div class="notification">
-											<div class="notification-title text-success">SYSTEM</div>
-											<div class="notification-description">Server <strong>up</strong>.</div>
-											<div class="notification-ago">12h ago</div>
+											<div class="notification-title text-success">系统</div>
+											<div class="notification-description">服务器 <strong>已开启</strong>.</div>
+											<div class="notification-ago">12小时前</div>
 											<div class="notification-icon fa fa-hdd-o bg-success"></div>
 										</div> <!-- / .notification -->
 
 										<div class="notification">
 											<div class="notification-title text-warning">SYSTEM</div>
-											<div class="notification-description"><strong>Warning</strong>: Processor load <strong>92%</strong>.</div>
-											<div class="notification-ago">12h ago</div>
+											<div class="notification-description"><strong>警告</strong>：处理器负载 <strong>92%</strong>.</div>
+											<div class="notification-ago">12小时前</div>
 											<div class="notification-icon fa fa-hdd-o bg-warning"></div>
 										</div> <!-- / .notification -->
 
 									</div> <!-- / .notifications-list -->
-									<a href="#" class="notifications-link">MORE NOTIFICATIONS</a>
+									<a href="#" class="notifications-link">查看更多通知</a>
 								</div> <!-- / .dropdown-menu -->
 							</li>
 							<li class="nav-icon-btn nav-icon-btn-success dropdown">
 								<a href="#messages" class="dropdown-toggle" data-toggle="dropdown">
 									<span class="label">10</span>
-									<i class="nav-icon fa fa-envelope"></i>
-									<span class="small-screen-text">Income messages</span>
+									<i class="nav-icon fa fa-envelope-o"></i>
+									<span class="small-screen-text">消息</span>
 								</a>
 
 								<!-- MESSAGES -->
@@ -227,127 +227,87 @@ Use search to find needed section.
 
 										<div class="message">
 											<img src="assets/demo/avatars/2.jpg" alt="" class="message-avatar">
-											<a href="#" class="message-subject">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a>
+											<a href="#" class="message-subject">后台效果很不错啊！</a>
 											<div class="message-description">
-												from <a href="#">Robert Jang</a>
+												来自 <a href="#">裤衩帅哥</a>
 												&nbsp;&nbsp;·&nbsp;&nbsp;
-												2h ago
+												2小时前
 											</div>
 										</div> <!-- / .message -->
 
 										<div class="message">
 											<img src="assets/demo/avatars/3.jpg" alt="" class="message-avatar">
-											<a href="#" class="message-subject">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a>
+											<a href="#" class="message-subject">昨天下载的U+，简单易用，很容易上手！</a>
 											<div class="message-description">
-												from <a href="#">Michelle Bortz</a>
+												来自 <a href="#">张亮</a>
 												&nbsp;&nbsp;·&nbsp;&nbsp;
-												2h ago
+												2小时前
 											</div>
 										</div> <!-- / .message -->
 
 										<div class="message">
 											<img src="assets/demo/avatars/4.jpg" alt="" class="message-avatar">
-											<a href="#" class="message-subject">Lorem ipsum dolor sit amet.</a>
+											<a href="#" class="message-subject">请问U+有帮助文档吗？</a>
 											<div class="message-description">
-												from <a href="#">Timothy Owens</a>
+												来自 <a href="#">Timothy</a>
 												&nbsp;&nbsp;·&nbsp;&nbsp;
-												2h ago
+												2小时前
 											</div>
 										</div> <!-- / .message -->
 
 										<div class="message">
 											<img src="assets/demo/avatars/5.jpg" alt="" class="message-avatar">
-											<a href="#" class="message-subject">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a>
+											<a href="#" class="message-subject">我有购买意愿，联系我电话：1555542544</a>
 											<div class="message-description">
-												from <a href="#">Denise Steiner</a>
+												来自 <a href="#">曹文泽</a>
 												&nbsp;&nbsp;·&nbsp;&nbsp;
-												2h ago
+												2小时前
 											</div>
 										</div> <!-- / .message -->
 
 										<div class="message">
 											<img src="assets/demo/avatars/2.jpg" alt="" class="message-avatar">
-											<a href="#" class="message-subject">Lorem ipsum dolor sit amet.</a>
+											<a href="#" class="message-subject">怎么样制作自己的主题？</a>
 											<div class="message-description">
-												from <a href="#">Robert Jang</a>
+												来自 <a href="#">飞天鼠D</a>
 												&nbsp;&nbsp;·&nbsp;&nbsp;
-												2h ago
+												2小时前
 											</div>
 										</div> <!-- / .message -->
 
 										<div class="message">
 											<img src="assets/demo/avatars/2.jpg" alt="" class="message-avatar">
-											<a href="#" class="message-subject">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a>
+											<a href="#" class="message-subject">购买后是否是否能够免费升级最新版？</a>
 											<div class="message-description">
-												from <a href="#">Robert Jang</a>
+												来自 <a href="#">核桃</a>
 												&nbsp;&nbsp;·&nbsp;&nbsp;
-												2h ago
-											</div>
-										</div> <!-- / .message -->
-
-										<div class="message">
-											<img src="assets/demo/avatars/3.jpg" alt="" class="message-avatar">
-											<a href="#" class="message-subject">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a>
-											<div class="message-description">
-												from <a href="#">Michelle Bortz</a>
-												&nbsp;&nbsp;·&nbsp;&nbsp;
-												2h ago
-											</div>
-										</div> <!-- / .message -->
-
-										<div class="message">
-											<img src="assets/demo/avatars/4.jpg" alt="" class="message-avatar">
-											<a href="#" class="message-subject">Lorem ipsum dolor sit amet.</a>
-											<div class="message-description">
-												from <a href="#">Timothy Owens</a>
-												&nbsp;&nbsp;·&nbsp;&nbsp;
-												2h ago
-											</div>
-										</div> <!-- / .message -->
-
-										<div class="message">
-											<img src="assets/demo/avatars/5.jpg" alt="" class="message-avatar">
-											<a href="#" class="message-subject">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a>
-											<div class="message-description">
-												from <a href="#">Denise Steiner</a>
-												&nbsp;&nbsp;·&nbsp;&nbsp;
-												2h ago
-											</div>
-										</div> <!-- / .message -->
-
-										<div class="message">
-											<img src="assets/demo/avatars/2.jpg" alt="" class="message-avatar">
-											<a href="#" class="message-subject">Lorem ipsum dolor sit amet.</a>
-											<div class="message-description">
-												from <a href="#">Robert Jang</a>
-												&nbsp;&nbsp;·&nbsp;&nbsp;
-												2h ago
+												2小时前
 											</div>
 										</div> <!-- / .message -->
 
 									</div> <!-- / .messages-list -->
-									<a href="#" class="messages-link">MORE MESSAGES</a>
+									<a href="#" class="messages-link">查看更多消息</a>
 								</div> <!-- / .dropdown-menu -->
 							</li>
 <!-- /3. $END_NAVBAR_ICON_BUTTONS -->
 
 							<li>
 								<form class="navbar-form pull-left">
-									<input type="text" class="form-control" placeholder="Search">
+									<input type="text" class="form-control" placeholder="搜索">
 								</form>
 							</li>
 
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle user-menu" data-toggle="dropdown">
-									<img src="assets/demo/avatars/1.jpg">
-									<span>John Doe</span>
+									<img src="assets/demo/avatars/1.jpg" alt="">
+									<span>Admin</span>
 								</a>
 								<ul class="dropdown-menu">
-									<li><a href="#"><span class="label label-warning pull-right">New</span>Profile</a></li>
-									<li><a href="#"><span class="badge badge-primary pull-right">New</span>Account</a></li>
-									<li><a href="#"><i class="dropdown-icon fa fa-cog"></i>&nbsp;&nbsp;Settings</a></li>
+									<li><a href="#"><span class="label label-warning pull-right">New</span>简介</a></li>
+									<li><a href="#"><span class="badge badge-primary pull-right">New</span>账户</a></li>
+									<li><a href="#"><i class="dropdown-icon fa fa-cog"></i>&nbsp;&nbsp;设置</a></li>
 									<li class="divider"></li>
-									<li><a href="pages-signin.html"><i class="dropdown-icon fa fa-power-off"></i>&nbsp;&nbsp;Log Out</a></li>
+									<li><a href="pages-signin.html"><i class="dropdown-icon fa fa-power-off"></i>&nbsp;&nbsp;退出</a></li>
 								</ul>
 							</li>
 						</ul> <!-- / .navbar-nav -->
@@ -1204,8 +1164,8 @@ Use search to find needed section.
 			    <div class="alert alert-success">
 			        <ul class="fa-ul">
 			            <li>
-			                <i class="fa fa-info-circle fa-lg fa-li"></i> These icons work great with the <code>fa-spin</code> class. Check out the
-			                <a title="" data-original-title="" href="http://fontawesome.io/examples/#animated" class="alert-link" target="_blank" rel="nofollow">spinning icons example</a>.
+			                <i class="fa fa-info-circle fa-lg fa-li"></i> 这些图标 <code>旋转</code> 效果很好. 查看
+			                <a title="" data-original-title="" href="http://fontawesome.io/examples/#animated" class="alert-link" target="_blank" rel="nofollow">官网旋转图标示例</a>.
 			            </li>
 			        </ul>
 			    </div>
@@ -1615,7 +1575,7 @@ Use search to find needed section.
 
 <!-- Get jQuery from Google CDN -->
 <!--[if !IE]> -->
-	<script type="text/javascript"> window.jQuery || document.write('<script src="assets/javascripts/jquery-1.8.3.min.js">'+"<"+"/script>"); </script>
+	<script type="text/javascript"> window.jQuery || document.write('<script src="assets/js/jquery-1.11.3.min.js">'+"<"+"/script>"); </script>
 <!-- <![endif]-->
 <!--[if lte IE 9]>
 	<script type="text/javascript"> window.jQuery || document.write('<script src="assets/javascripts/jquery-1.8.3.min.js">'+"<"+"/script>"); </script>
@@ -1623,8 +1583,8 @@ Use search to find needed section.
 
 
 <!-- Pixel Admin's javascripts -->
-<script src="assets/javascripts/bootstrap.min.js"></script>
-<script src="assets/javascripts/pixel-admin.min.js"></script>
+<script src="assets/libs/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script src="assets/js/pixel-admin.min.js"></script>
 
 <script type="text/javascript">
 	init.push(function () {
